fixed emojis on mobile

--- a/tictactoerev.css
+++ b/tictactoerev.css
@@ -1,9 +1,14 @@
+@font-face {
+  font-family: 'Arista';
+  src: url('arista2.0alternatelight.ttf') format('truetype');
+}
+
 body, html {
   height: 100%;
   font-size: 25px;
   background-color: #000000;
   color: #c181eb;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Arista', sans-serif;
 }
 
 .container {
@@ -19,7 +24,7 @@ body, html {
   padding: 0px;
   width: 50px;
   height: 150px;
-  line-height: 150px;
+  line-height: 130px;
   font-size: 150px;
 }
 
@@ -47,6 +52,7 @@ body, html {
 
 .emoji {
   font-size: 125px;
+  font-family: none;
 }
 
 .win-style {
@@ -57,14 +63,14 @@ body, html {
 
 @media screen and (max-width: 600px){
   body, html {
-    font-size: 16px;
+    font-size: 20px;
   }
 
   [class^="s"] {
     font-size: 100px;
     width: 33px;
     height: 100px;
-    line-height: 100px;
+    line-height: 80px;
   }
 
   .X, .O {
@@ -76,6 +82,6 @@ body, html {
   }
 
   .emoji {
-    font-size: 83px;
+    font-size: 54px;
   }
 }
